Tubes show up with coloured balls, though they're not in the right spot or right number.

--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
   <title>Ball Sorter</title>
   <style>
     #display {
-      height:300px;
+      height:130px;
+      width:500px;
+      padding:30px;
     }
 
     .tube {
       min-width:32px;
-      min-height:234px;
+      min-height:100px;
       border-color: black;
       border-style: solid;
       border-width: 1px;
       padding-left: 20px;
       padding-right: 20px;
+      display: inline-block;
     }
 
     .ball {
@@ -30,12 +33,13 @@
       border-style: solid;
       border-width: 1px;
       padding: 1px;
+      bottom: 0;
     }
   </style>
 </head>
 <body>
-    <div id="buttons">Buttons</div>
-    <div id="display">Display</div>
+    <div id="buttons">Buttons</div><p></p>
+    <div id="display"></div>
 
 
 
