Right colours and numbers are showing up.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     .tube {
       min-width:32px;
-      min-height:100px;
+      min-height:110px;
       border-color: black;
       border-style: solid;
       border-width: 1px;
@@ -32,7 +32,7 @@
       border-color: grey;
       border-style: solid;
       border-width: 1px;
-      padding: 1px;
+      margin: 1px;
       bottom: 0;
     }
   </style>
