About to try to make it work synchronously - big refactor.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       border-style: solid;
       border-width: 1px;
       margin: 1px;
+      /* position: absolute; */
       bottom: 0;
     }
   </style>
