Have to put off the syncronous at this time, about to start making it work with buttons to move forward and back.  Added buttons already.

--- a/index.html
+++ b/index.html
@@ -36,10 +36,23 @@
       /* position: absolute; */
       bottom: 0;
     }
+
+    button {
+      float: left;
+      max-width: 200;
+    }
   </style>
 </head>
 <body>
-    <div id="buttons">Buttons</div><p></p>
+    <div id="buttons">Buttons<p></p>
+      <button id="prev">Go back to Start</div>
+      <button id="prev">Previous Step</div>
+      <button id="first">Next Step</div>
+      <button id="last">See end stage</div>
+      <button id="play">Play from here</div>
+      <button id="playFromStart">Play from Start</div>
+    </div>
+    <p></p>
     <div id="display"></div>
 
 
