--- a/js/index.html
+++ b/js/index.html
@@ -66,10 +66,9 @@
     #ballSelect {
       position:relative;
       height:36px;
-      width: 180px;
-      /* top: 176px; */
       padding-left: 30px;
       padding-top: 30px;
+      /* border: 1px solid blue; */
     }
   
     #ballSelect .ball {
@@ -118,6 +117,7 @@
     <div id="builderButtons">
       <!-- Main controls -->
       <button class="actionButton" id="reset">Reset</button><p>
+      <button class="actionButton" id="genJSON">Generate JSON file</button><p>
       <label for="numColours">How Many Colours:</label>
       <input type="number" id="numColours" min=2 max=14 value=4> 
       <label for="numTBalls">How Many Balls per Tube:</label>
