Auto stash before rebase of "refs/heads/master"

--- a/js/index.html
+++ b/js/index.html
@@ -39,7 +39,7 @@
       <button class="actionButton" id="reset">Reset</button><p>
       <button class="actionButton" id="genJSON">Generate JSON</button><p>
       <label for="numColours">How Many Colours:</label>
-      <input class='gridSize' type="number" id="numColours" min=2 max=14 value=4> 
+      <input class='gridSize' type="number" id="numColours" min=2 max=14 value=4> &nbsp;&nbsp;&nbsp;
       <label class='gridSize' for="numBalls">How Many Balls per Tube:</label>
       <input type="number" id="numBalls" min=2 max=5 value=3>
       <button  class="actionButton" id="updateGrid">Update Grid</button> <p>
@@ -56,6 +56,6 @@
   <script src="easyhttp2.js"></script>
   <script src="app.js"></script>
   <script src="builder.js"></script>
-  <script src="solver.js"></script>
+  <!-- <script src="solver.js"></script> -->
 </body>
 </html>
