Fixed click, update, fade etc not working with gradient.  Also swapped path with composedPath() so it works on firefox.

--- a/js/index.html
+++ b/js/index.html
@@ -36,7 +36,7 @@
   <div id="builder" class="pageElement">
     <div id="builderButtons">
       <!-- Main controls -->
-      <button class="actionButton" id="reset">Reset</button><p>
+      <button class="actionButton" id="reset">Reset</button>
       <button class="actionButton" id="genJSON">Generate JSON</button><p>
       <label for="numColours">How Many Colours:</label>
       <input class='gridSize' type="number" id="numColours" min=2 max=14 value=4> &nbsp;&nbsp;&nbsp;
@@ -56,6 +56,6 @@
   <script src="easyhttp2.js"></script>
   <script src="app.js"></script>
   <script src="builder.js"></script>
-  <!-- <script src="solver.js"></script> -->
+  <script src="solver.js"></script>
 </body>
 </html>
