About to attempt removing the absolute positioning and this is where I'll revert to when I fuck that up

--- a/js/index.html
+++ b/js/index.html
@@ -34,9 +34,11 @@
     
   </div>
   <div id="builder" class="pageElement">
+    <div class="title">Puzzle Builder</div><p>
+    <div class="subtitle">Use this tool to create puzzles for the solver to solve.  This is useful for solving existing puzzles from games like <a href="https://play.google.com/store/apps/details?id=com.spicags.ballsort&hl=en_US&gl=US" Ball Sort Puzzle </a> and all of the similar games</div>
     <div id="builderButtons">
       <!-- Main controls -->
-      <button class="actionButton" id="reset">Reset</button>
+      <button class="actionButton" id="resetBuilder">Reset</button>
       <button class="actionButton" id="genJSON">Generate JSON</button><p>
       <label for="numColours">How Many Colours:</label>
       <input class='gridSize' type="number" id="numColours" min=2 max=14 value=4> &nbsp;&nbsp;&nbsp;
