Cleaned up folders examples

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     </div>
   </div>
 
-  <script src="easyhttp2.js"></script>
-  <script src="app.js"></script>
-  <script src="builder.js"></script>
-  <script src="solver.js"></script>
+  <script src="js/easyhttp2.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/builder.js"></script>
+  <script src="js/solver.js"></script>
 </body>
 </html>
