--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <script src="js/easyhttp2.js"></script>
   <script src="js/app.js"></script>
-  <script src="js/builder.js"></script>
+  <!-- <script src="js/builder.js"></script> -->
   <script src="js/solver.js"></script>
 </body>
 </html>
