Separated into separate JS files
Working

--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
   </div>
 
   <script src="js/easyhttp2.js"></script>
-  <script src="js/app.js"></script>
-  <!-- <script src="js/builder.js"></script> -->
+  <script src="js/tube.js"></script>
+  <script src="js/ball.js"></script>
+  <script src="js/builder.js"></script>
   <script src="js/solver.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
