Several minor fixes, dropdown
added dropdown
renamed files
Added ifPlayingPause to solver
fixed stage not displaying

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       Build the grid you want to solve with my builder, solve it using that solver and then animate it here.</div>  
      <div id="solverButtons">
     <!-- Main controls -->
+    <!-- Select puzzle -->
+      <label for="puzzle">Choose which pre-solved puzzle to display: </label><select name="puzzle" id="puzzle"></select> <p>
       <button class="actionButton" id="beginning">Go back to Start</button>
       <button class="actionButton" id="prev">Previous Step</button>
       <button class="actionButton" id="next">Next Step</button>
