--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     
     <link rel="stylesheet" href="css.css" />
 <body>
-  <button id="lnkSolver" class="pageButton">Solver</button>  
+  <button id="lnkAnimator" class="pageButton">Animator</button>  
   <button id="lnkBuilder" class="pageButton">Builder</button>
   <p>
   
   
-  <div id="solver" class="pageElement">
+  <div id="animator" class="pageElement">
     <div class="title">Puzzle Solving Visualizer</div>
     <div class="desc">Use this tool to visualize solved puzzles.  <br>
       Build the grid you want to solve with my builder, solve it using that solver and then animate it here.</div>  
-     <div id="solverButtons">
+     <div id="animatorButtons">
     <!-- Main controls -->
     <!-- Select puzzle -->
       <label for="puzzle">Choose which pre-solved puzzle to display: </label><select name="puzzle" id="puzzle"></select> <p>
@@ -68,6 +68,7 @@
   <script src="js/ball.js"></script>
   <script src="js/builder.js"></script>
   <script src="js/solver.js"></script>
+  <script src="js/animator.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
