Solver can solve created puzzle
Builder can build a puzzle and then pass it to the solver to solve.
Next step is to do some refactoring on the animator code to decouple it from the constructor and allow it to accept a solved puzzle

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 <body>
   <button id="lnkAnimator" class="pageButton">Animator</button>  
   <button id="lnkBuilder" class="pageButton">Builder</button>
+  <button id="lnkSolve" class="pageButton">Solve Puzzle</button>
+
   <p>
   
   
   <div id="animator" class="pageElement">
     <div class="title">Puzzle Solving Visualizer</div>
     <div class="desc">Use this tool to visualize solved puzzles.  <br>
-      Build the grid you want to solve with my builder, solve it using that solver and then animate it here.</div>  
+      Build the grid you want to solve with my builder, and then animate it here.</div>  
      <div id="animatorButtons">
     <!-- Main controls -->
     <!-- Select puzzle -->
@@ -42,7 +44,7 @@
   <div id="builder" class="pageElement">
       <div class="title">Puzzle Builder</div>
       <div class="desc">Use this tool to build puzzles for the solver to solve.  <br>
-        Build the grid you want to solve, solve it using that solver and then send it to my animator. Currently you must copy the JSON and save it.</div>  
+        Build the grid you want to solve, and then send it to my animator. Currently you must copy the JSON and save it.</div>  
     <div id="builderButtons">
       <!-- Main controls -->
 
