--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div id="animator" class="pageElement">
     <div class="title">Puzzle Solving Visualizer</div>
     <div class="desc">Use this tool to visualize solved puzzles.  <br>
-      Build the grid you want to solve with my builder, and then animate it here.</div>  
+      Build the grid you want to solve with my builder, and then animate it here. Remember, it's a 'dumb' solver, so it won't always be optimal.</div>  
      <div id="animatorButtons">
     <!-- Main controls -->
     <!-- Select puzzle -->
