Minor updates, nothing worked out yet

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
       <input type="number" id="numBalls" min=2 max=5 value=3><p></p>
       <button class="actionButton" id="resetBuilder">Reset</button>
       <button class="actionButton" id="genJSON">Generate JSON</button>
-      <button  class="actionButton" id="updateGrid">Update Grid</button> <p>
+      <button  class="actionButton" id="updateGrid">Update Grid</button>
+      <button class="actionButton" id="randomize">Randomly Generate</button>
+      <p>
         
     </div>
     <div id="builderTubeDisplay"></div>
