--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
   
   
   <div id="animator" class="pageElement">
-    <div class="title">Puzzle Solving Visualizer</div>
-    <div class="desc">This displays and animates the solving process for puzzles built in the Builder, and also a handful of presolved puzzles to demonstrate how it works.  <p>
-      Remember, it's a 'dumb' solver, so it won't always be optimal.</div>  
-    <div id="animatorButtons">
+    <div id="header">
+      <div class="title">Puzzle Solving Visualizer </div>  
+      <div class="">This displays and animates the solving process for puzzles built in the Builder, and also a handful of presolved puzzles to demonstrate how it works.  <p>
+        Remember, it's a 'dumb' solver, so it won't always be optimal.</div>  
+    </div>
+    <div id="animatorButtons" class="controls">
     <!-- Main controls -->
     <!-- Select puzzle -->
       <label for="puzzle">Choose which pre-solved puzzle to display: </label><select name="puzzle" id="puzzle"></select> <p>
@@ -39,14 +41,16 @@
       <button class="actionButton playControls playControlsButton" id="pause">Pause</button>
       <span class="playControls" id="movesPer"></span>
 
+      <div id="stage"></div>
     </div> 
      <p></p>
-    <div id="display"></div>
+    <!-- <div id="display"></div> -->
+    <div id="animatorDisplay" class="tubes"></div>
     
   </div>
   <div id="builder" class="pageElement">
       <div class="title">Puzzle Builder</div>
-      <div class="desc">This is use to build a sorting puzzle to be solved in the solver and displayed in the animator. <p>
+      <div class="desc">This is used to build a sorting puzzle to be solved in the solver and displayed in the animator. <p>
       Currently there is a bug when solving some puzzles larger than 10x5 where it goes into a loop.  If that happens, just close and relaunch the page.  
       </div>  
     <div id="builderButtons">
@@ -62,7 +66,7 @@
       <p>
         
     </div>
-    <div id="builderTubeDisplay"></div>
+    <div id="builderTubeDisplay" class="tubes"></div>
     <div id="builderSelectorDisplay">
       <div id="ballSelect"></div>
     </div>
